Switch local client from iframe to Fetch+Inject bootstrapper to fix content-type issues

--- a/local-file/index.html
+++ b/local-file/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4SP Local</title>
+    <title>4SP Local Client</title>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            background-color: #040404;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            display: block;
-        }
+        body { background-color: #040404; color: #c0c0c0; font-family: sans-serif; }
     </style>
 </head>
 <body>
-    <iframe id="appFrame" src="https://cdn.jsdelivr.net/npm/4sp-local-client@1.0.0/authentication.html" allow="clipboard-read; clipboard-write; autoplay; fullscreen"></iframe>
+    <div style="display:flex;justify-content:center;align-items:center;height:100vh;">
+        <p>Loading 4SP Local...</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/4sp-local-client@1.0.0/local-bootstrapper.js"></script>
 </body>
 </html>
