--- a/local-file/index.html
+++ b/local-file/index.html
@@ -12,6 +12,6 @@
     <div style="display:flex;justify-content:center;align-items:center;height:100vh;">
         <p>Loading 4SP Local (v1.0.2)...</p>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/4sp-local-client@1.0.2/local-bootstrapper.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/4sp-local-client@latest/local-bootstrapper.js"></script>
 </body>
 </html>
