Enhance local client bootstrapper for @latest, robust pathing, CSS loading, and sequential script execution

--- a/local-file/index.html
+++ b/local-file/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div style="display:flex;justify-content:center;align-items:center;height:100vh;">
-        <p>Loading 4SP Local (v1.0.2)...</p>
+        <p>Loading 4SP Local (v@latest)...</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/4sp-local-client@latest/local-bootstrapper.js"></script>
 </body>
