Update CDN_BASE to GitHub repository URL in local bootstrapper

--- a/local-file/4simpleproblems_v5.html
+++ b/local-file/4simpleproblems_v5.html
@@ -30,9 +30,7 @@
     <script>
 (function() {
     // UPDATED VERSION to use @latest
-    const CDN_BASE_PACKAGE = '4sp-local-client';
-    const CDN_BASE_VERSION = '@latest';
-    const CDN_BASE = `https://cdn.jsdelivr.net/npm/${CDN_BASE_PACKAGE}${CDN_BASE_VERSION}`;
+    const CDN_BASE = `https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5-4simpleproblems.github.io@main/`;
     
     // Helper: Fix relative URLs in HTML content
     function fixRelativeUrls(html) {
