--- a/4simpleproblems-v5.html
+++ b/4simpleproblems-v5.html
@@ -56,7 +56,7 @@
         const lockMessage = document.getElementById('lockMessage');
         const loadingText = document.getElementById('loading-text');
 
-        const BASE_URL = 'https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5@main/logged-in/';
+        const BASE_URL = 'https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5-4simpleproblems.github.io@main/logged-in/';
 
         // Check if data is present
         if (!window.__ACCESS_CODE__ || window.__ACCESS_CODE__ === "{{ACCESS_CODE}}") {
