Revert to NPM CDN source (4sp-local-client@latest) and fix ReferenceError

--- a/local-file/4simpleproblems_v5.html
+++ b/local-file/4simpleproblems_v5.html
@@ -30,7 +30,9 @@
     <script>
 (function() {
     // UPDATED VERSION to use @latest
-    const CDN_BASE = `https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5-4simpleproblems.github.io@main/`;
+    const CDN_BASE_PACKAGE = '4sp-local-client';
+    const CDN_BASE_VERSION = '@latest';
+    const CDN_BASE = `https://cdn.jsdelivr.net/npm/${CDN_BASE_PACKAGE}${CDN_BASE_VERSION}`;
     
     // Helper: Fix relative URLs in HTML content
     function fixRelativeUrls(html) {
