Fix: Local client script loading and Firebase initialization issues
This commit addresses several issues preventing the local client from loading all JavaScript, HTML, and CSS elements correctly, and resolves Firebase initialization conflicts.

Key changes include:
- Modified  to load local files instead of CDN resources.
- Re-enabled Firebase Auth SDK in  and ensured idempotent Firebase initialization.
- Refactored  to move  to a globally accessible scope and removed redundant  function.
- Standardized Firebase SDK usage in  and  to use the compat SDK.
- Re-implemented device linking and weather logic in  and  using the global Firebase object.
- Re-added  to  and  to ensure proper loading of other application scripts.

--- a/local-file/4simpleproblems_v5.html
+++ b/local-file/4simpleproblems_v5.html
@@ -90,9 +90,7 @@
     <!-- Local Bootstrapper -->
     <script>
 (function() {
-    const CDN_BASE_PACKAGE = '4sp-local-client';
-    const CDN_BASE_VERSION = '@latest';
-    const CDN_BASE = `https://cdn.jsdelivr.net/npm/${CDN_BASE_PACKAGE}${CDN_BASE_VERSION}`;
+    const CDN_BASE = ''; // Changed from CDN URL to empty string for local loading
     
     // Inlined Module for config interception
     const FIREBASE_CONFIG_MODULE = `data:text/javascript;charset=utf-8,export const firebaseConfig = window.firebaseConfig;`;
