feat: Implement new 4sp-local client with code-based authentication
This commit introduces a new authentication and file delivery system for the 4sp-local client, moving away from Firebase Auth for the local application and enhancing security and control.

Key Changes:
- ** folder:** Created to house Cloud Functions and Firestore rules.
- **Cloud Functions ():**
  - : Securely creates one-time unlock codes, hashes them with HMAC-SHA256, and stores metadata in Firestore.
  - : Verifies unlock codes, binds them to device fingerprints using atomic Firestore transactions, and issues short-lived download tokens.
  - : Allows authorized users to invalidate codes or unlink devices.
  - : Acts as a secure proxy to the CDN, validating tokens before serving application files.
- **Firestore Rules ():**
  - New rules for the  collection, disallowing client-side writes and restricting reads to code owners or administrators.
- **Local Client Bootstrapper ():**
  - Removed Firebase authentication code and related interception logic.
  - Implemented UI for entering unlock codes.
  - Integrated client-side device fingerprinting.
  - Implemented logic to call  Cloud Function and use the resulting download token to fetch application files from the CDN.
  -  updated to a placeholder CDN URL.
- **Connector Site Authentication ():**
  - Refactored to act as a code generation and management hub.
  - Integrated UI and logic to call  Cloud Function.
  - Added UI and logic to list active codes and call  Cloud Function, assuming Firebase Auth context for the user.
- **General Enhancements:**
  - Improved UX with clear instructions and error messages for code generation and redemption.
  - Conceptual guidance added for secure secret management (HMAC_SECRET).

This new architecture provides a more robust and controlled method for distributing and accessing the 4sp-local client.

--- a/logged-in/dashboard.html
+++ b/logged-in/dashboard.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../../injector.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/4sp-local-client@latest/injector.js"></script>
 
     <style>
         /* --- FONT & BASE STYLING --- */
@@ -226,18 +226,18 @@
     </style>
 </head>
 
-<body>
+<body data-page-id="dashboard">
     <div id="page-content">
         <div id="dashboard-widget" class="dashboard-widget">
             
-            <div class="clock-section">
+            <div class="clock-section" data-section-id="clock">
                 <div id="clock-time" class="time-display">--:--<span class="seconds-display">--</span></div>
                 <div id="clock-date" class="date-display">--------</div>
             </div>
 
             <div class="vertical-divider"></div>
 
-            <div class="weather-section">
+            <div class="weather-section" data-section-id="weather">
                 <div class="weather-main">
                     <div id="w-icon" class="weather-icon"><i class="fa-solid fa-cloud"></i></div>
                     <div id="w-temp" class="weather-temp">--°</div>
@@ -270,7 +270,8 @@
         // --- GLOBAL STATE ---
         let CURRENT_LAT = null;
         let CURRENT_LON = null;
-        const redirectPath = '../index.html';
+        const CDN_BASE_URL = 'https://cdn.jsdelivr.net/npm/4sp-local-client@latest/';
+        const redirectPath = CDN_BASE_URL + 'index.html';
         const WEATHER_CACHE_KEY = 'weather_data_cache';
         // 5 minutes in milliseconds
         const REFRESH_INTERVAL_MS = 5 * 60 * 1000; 
