--- a/local-file/4simpleproblems_v5.html
+++ b/local-file/4simpleproblems_v5.html
@@ -79,7 +79,7 @@
     <!-- Local Bootstrapper -->
     <script>
 (function() {
-    const CDN_BASE = 'https://your-cdn-url.com/web-files'; // TODO: Update with your actual CDN URL for web-files
+    const CDN_BASE = 'https://cdn.jsdelivr.net/npm/4sp-local-client@latest/web-files'; // TODO: Update with your actual CDN URL for web-files
     
 
 
