--- a/authentication.html
+++ b/authentication.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <script src="../navigation-mini.js"></script>
+    <script src="navigation-mini.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         // Unified Tailwind CSS configuration for a consistent dark theme
@@ -191,7 +191,7 @@
                         Continue with GitHub
                     </button>
                     <button id="twitterAuthBtn" class="btn-social flex items-center justify-center w-full max-w-md p-3 bg-custom-dark-gray text-custom-white-gray border border-custom-medium-gray rounded-xl font-normal cursor-pointer mb-3">
-                        <img src="../images/x.png" alt="X Logo" class="w-6 h-6 mr-3">
+                        <img src="images/x.png" alt="X Logo" class="w-6 h-6 mr-3">
                         Continue with X
                     </button>
 
