--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../navigation-mini.js"></script>
+    <script src="navigation-mini.js"></script>
 
     <script>
         tailwind.config = {
