--- a/documentation.html
+++ b/documentation.html
@@ -14,7 +14,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <script src="../navigation-mini.js" defer></script> 
+    <script src="navigation-mini.js" defer></script> 
     
     <style>
         :root {
