--- a/verify.html
+++ b/verify.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../navigation-mini.js"></script>
+    <script src="navigation-mini.js"></script>
 
     <script>
         tailwind.config = {
