Refactor: Switch CDN to npm-based jsDelivr URL

--- a/4simpleproblems-version-5.html
+++ b/4simpleproblems-version-5.html
@@ -116,7 +116,7 @@
         } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
         // CONFIG
-        const CDN_BASE = 'https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5-4simpleproblems.github.io@master/';
+        const CDN_BASE = 'https://cdn.jsdelivr.net/npm/4sp-local-client@latest/';
         const FIREBASE_CONFIG = {
             apiKey: "AIzaSyAZBKAckVa4IMvJGjcyndZx6Y1XD52lgro",
             authDomain: "project-zirconium.firebaseapp.com",
