--- a/4simpleproblems-v5.html
+++ b/4simpleproblems-v5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4SP - LOCAL CLIENT</title>
-    <base href="https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5@main/logged-in/">
+    <base href="https://cdn.jsdelivr.net/npm/4sp-local-client@latest/logged-in/">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
@@ -56,7 +56,7 @@
         const lockMessage = document.getElementById('lockMessage');
         const loadingText = document.getElementById('loading-text');
 
-        const BASE_URL = 'https://cdn.jsdelivr.net/gh/v5-4simpleproblems/v5-4simpleproblems.github.io@main/logged-in/';
+        const BASE_URL = 'https://cdn.jsdelivr.net/npm/4sp-local-client@latest/logged-in/';
 
         // Check if data is present
         if (!window.__ACCESS_CODE__ || window.__ACCESS_CODE__ === "{{ACCESS_CODE}}") {
