Fix potential syntax error in lightThemeNames definition

--- a/4simpleproblems-version-5.html
+++ b/4simpleproblems-version-5.html
@@ -243,7 +243,7 @@ const FIREBASE_CONFIG = {
 const PAGE_CONFIG_URL = '../page-identification.json';
 const PRIVILEGED_EMAIL = '4simpleproblems@gmail.com'; 
 const THEME_STORAGE_KEY = 'user-navbar-theme';
-const lightThemeNames = ['Light', 'Lavender', 'Rose Gold', 'Mint', 'Pink']; // Define light theme names
+const lightThemeNames = ["Light", "Lavender", "Rose Gold", "Mint", "Pink"];
 
 const DEFAULT_THEME = {
     'name': 'Dark', // <--- ADD THIS LINE
